# src/services/enclave/dispatch/schema.ts
@@ -1,0 +1,14 @@
+import {checkSchema} from "express-validator";
+const createDispatchSchema = checkSchema({
+  enclaveId: {
+    in: "body",
+    isString: true,
+    isUUID: true
+  },
+  content: {
+    in: "body",
+    isString: true,
+    notEmpty: true
+  }
+});
+export {createDispatchSchema};
